javanese, Reviewed & updated. Make order phonetic. Fix shift button colour.

--- a/javanese/localstyle.css
+++ b/javanese/localstyle.css
@@ -60,11 +60,10 @@ span.hint {
 #consonantGrid div, #subConsonantGrid div {
     white-space: normal;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     flex-direction: row;
-    width: 9.5em;
     justify-content: space-between;
-    line-height: 1.8;
+    line-height: 1.5;
     }
 #consonantGrid > span {
     min-width: 1em;
